<resources>
    <string name="app_name">FitnessApp</string>
    <string name="add_user">Dodaj użytkownika</string>
    <string name="add_user_subheading">i śledź kalorie wielu osób jednocześnie</string>
    <string name="add">Dodaj</string>
    <string name="weight">Waga</string>
    <string name="height">Wzrost</string>
    <string name="age">Wiek</string>
    <string name="sex">Płeć</string>
    <string name="name">Nazwa</string>

    <string-array name="sex_array">
        <item>Mężczyzna</item>
        <item>Kobieta</item>
    </string-array>

    <string name="fill_all_fields">Uzupełnij wszystkie pola formularza</string>

    <string name="welcome">Witaj, %1$s!</string>
    <string name="how_did_your_day_look_like">Jak dziś wyglądał twój dzień?</string>
    <string name="home">Strona główna</string>
    <string name="users">Użytkownicy</string>
    <string name="diary">Dziennik</string>
    <string name="meals">Posiłki</string>
    <string name="exercises">Ćwiczenia</string>
    <string name="summary">Podsumowanie</string>
    <string name="empty_today_meals">Brak posiłków dzisiaj</string>
    <string name="empty_exercises_today">Brak ćwiczeń dzisiaj</string>
    <string name="choose_user_subheading">aby zarządzać jego dniem</string>
    <string name="choose_user">Wybierz użytkownika</string>
    <string name="choose_user_first">Najpierw wybierz użytkownika!</string>
    <string name="search">Wyszukaj</string>
    <string name="exercise_add">Dodaj ćwiczenie</string>
    <string name="add_exercise">Dodaj ćwiczenie</string>
    <string name="add_meal">Dodaj posiłek</string>
    <string name="journal">Dziennik</string>
    <string name="journal_subheading">notuj swoje posiłki i aktywności</string>
    <string name="burnt_calories_per_hour">Kalorie na godzine:</string>
    <string name="calories">Kaloryczność:</string>
</resources>