<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/add_user_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/container_margin"
    android:orientation="vertical"
    tools:context=".activity.UserCreateActivity">

    <TextView
        android:id="@+id/add_user_textview"
        style="@style/PoppinsBoldTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_black"
        android:text="@string/add_user"
        android:textSize="@dimen/heading_size" />

    <TextView
        android:id="@+id/add_user_subheading_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/section_margin"
        android:text="@string/add_user_subheading"
        android:textSize="@dimen/subheading_size" />

    <TextView
        android:id="@+id/add_user_name_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name" />

    <EditText
        android:id="@+id/add_user_name_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/element_margin"
        android:background="@drawable/custom_input"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:padding="@dimen/input_padding"
        android:textSize="@dimen/input_text_size" />

    <TextView
        android:id="@+id/add_user_sex_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sex" />

    <Spinner
        android:id="@+id/add_user_sex_spinner"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="@dimen/element_margin"
        android:background="@drawable/custom_spinner"
        android:dropDownVerticalOffset="40dp"
        android:textSize="@dimen/input_text_size" />

    <TextView
        android:id="@+id/add_user_age_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/age" />

    <EditText
        android:id="@+id/add_user_age_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/element_margin"
        android:background="@drawable/custom_input"
        android:ems="10"
        android:hint="18"
        android:inputType="number"
        android:padding="@dimen/input_padding"
        android:textSize="@dimen/input_text_size" />

    <TextView
        android:id="@+id/add_user_height_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/height" />

    <EditText
        android:id="@+id/add_user_height_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/element_margin"
        android:background="@drawable/custom_input"
        android:ems="10"
        android:hint="186"
        android:inputType="number"
        android:padding="@dimen/input_padding"
        android:textSize="@dimen/input_text_size" />

    <TextView
        android:id="@+id/add_user_weight_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/weight" />

    <EditText
        android:id="@+id/add_user_weight_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/section_margin"
        android:background="@drawable/custom_input"
        android:ems="10"
        android:hint="80"
        android:inputType="numberDecimal"
        android:padding="@dimen/input_padding"
        android:textSize="@dimen/input_text_size" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:gravity="bottom|center"
        android:orientation="vertical">

        <Button
            android:id="@+id/add_user_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add" />
    </LinearLayout>
</LinearLayout>