<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/container_margin"
    android:orientation="vertical"
    tools:context=".activity.fragment.JournalFragment">



    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
        <TextView
            android:id="@+id/textView6"
            style="@style/PoppinsBoldTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/journal"
            android:textSize="@dimen/heading_size" />

        <TextView
            android:id="@+id/textView7"
            style="@style/PoppinsTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/section_margin"
            android:text="@string/journal_subheading"
            android:textSize="@dimen/heading2_size" />

        <Button
            android:id="@+id/addMealButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_meal" />

        <Button
            android:id="@+id/addExerciseButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/section_margin"
            android:text="@string/add_exercise" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/section_margin"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                style="@style/PoppinsBoldTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/meals"
                android:textSize="@dimen/heading2_size" />

                <FrameLayout
                    android:id="@+id/journal_meallist_fragment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView3"
                style="@style/PoppinsBoldTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/exercises"
                android:textSize="@dimen/heading2_size" />


                <FrameLayout
                    android:id="@+id/journal_exerciselist_fragment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>