<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".activity.fragment.HomeFragment">

    <ScrollView android:layout_width="match_parent"
        android:layout_margin="@dimen/container_margin"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/welcome_textview"
                style="@style/PoppinsBoldTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/heading_size"
                tools:text="Witaj, Norbert!" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/section_margin"
                android:layout_weight="0"
                android:text="@string/how_did_your_day_look_like"
                android:textSize="@dimen/subheading_size"
                tools:ignore="InefficientWeight" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/section_margin"
                android:orientation="vertical">


                <com.github.mikephil.charting.charts.PieChart
                    android:id="@+id/home_piechart"
                    android:layout_width="match_parent"
                    android:layout_height="250dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/section_margin"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView"
                    style="@style/PoppinsBoldTextViewStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/meals"
                    android:textSize="@dimen/heading2_size" />

                <fragment
                    android:name="com.np.fitnessapp.activity.fragment.meal.ListMealFragment"
                    android:id="@+id/mealListFragment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:layout="@layout/fragment_meal_list" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView3"
                    style="@style/PoppinsBoldTextViewStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/exercises"
                    android:textSize="@dimen/heading2_size" />


                <fragment
                    android:name="com.np.fitnessapp.activity.fragment.exercise.ListExerciseFragment"
                    android:id="@+id/exerciseListFragement"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:layout="@layout/fragment_exercise_list" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</RelativeLayout>